<resources>
    <string name="app_name">AppGasEta</string>
    <string name="app_titulo">Gasolina vs Etanol</string>
    <string name="gasolina">R$ Gasolina</string>
    <string name="etanol">R$ Etanol</string>
    <string name="curso_desejado">Curso desejado</string>
    <string name="telefone_de_contato">Telefone de contato</string>
    <string name="btn_salvar">SALVAR</string>
    <string name="btn_calcular">CALCULAR</string>
    <string name="btn_limpar">LIMPAR</string>
    <string name="btn_finalizar">FINALIZAR</string>
    <string name="resultado">RESULTADO</string>
</resources>